<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <DUT Name="commUnitController" Id="{3540f8c1-cc91-4ec1-8a4f-7596595f2c82}">
    <Declaration><![CDATA[TYPE commUnitController EXTENDS commUnit :
STRUCT
	control : DWORD := 16#8; //32
	errorIndex : DWORD; //34
	errorType : DWORD; //36
	//due to memory alignment issue , had to seperate two dword
	errorCode1 : DWORD; // 38
	errorCode2 : DWORD; // 40
	
	reserved2 : ARRAY[42..47] OF WORD; //42-46
	monitorDatas : ARRAY[0..7] OF DWORD; //48-62
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>